# OpticalSims

./: CMakeLists.txt  OptickEnv  README  README.md  Speed.mac  config.h.in  g04.mac  gdml_det.cc  test.mac  vis.mac
Analysis/: G4andOpticksHitsTest.ipynb  Opticks_DebugNumpyfiles.ipynb  VoxelG4_OpticksTest.ipynb  visualization.txt
GDML/: dune10kt_v5_refactored_1x2x6_nowires-v2.gdml  dune10kt_v5_refactored_1x2x6_nowires.gdml  dune10kt_v5_refactored_1x2x6_nowires_NoField.gdml  dune10kt_v6_refactored_1x2x6.gdml  dunevd10kt_fullvd_wires.gdml  protodunehd_v6_refactored_nowires.gdml
include/: ActionInitialization.hh  AnalysisManagerHelper.hh  ArapucaHit.hh  ColorReader.hh  DetectorConstruction.hh  EventAction.hh  G4CerenkovOpticks.hh  G4OpticalPhysicsOpticks.hh  G4ScintillationOpticks.hh  LArSoftManager.hh  MySensorIdentifier.hh  OpticksHitHandler.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh  TrackingAction.hh
include/Opticks/: MySensorIdentifier.hh  OpticksHitHandler.hh
laropticks/: CMakeLists.txt  gdml_det.cc  vis.mac
laropticks/Analysis/: G4andOpticksHitsTest.ipynb  Opticks_DebugNumpyfiles.ipynb
laropticks/include/: DetectorConstruction.hh  G4CerenkovOpticks.hh  PrimaryGeneratorAction.hh  RunAction.hh  TrackingAction.hh
laropticks/macros/: Larsoft.mac  Speed.mac  g04.mac  iso.mac  test.mac
laropticks/src/: ActionInitialization.cc  AnalysisManagerHelper.cc  ArapucaHit.cc  G4ScintillationOpticks.cc  PhysicsList.cc
laropticks/src/Opticks/: MySensorIdentifier.cc  OpticksHitHandler.cc
macros/: Larsoft.mac  Performance.mac  dune10kt_v6_refactored.mac  dunevd10kt_fullvd_wires.mac  g04.mac  iso.mac  protodunehd_v6.mac  root.mac  test.mac
optix_tests/: CMakeLists.txt  README.md  photon_benchmark.cpp  photon_kernels.cu  photon_types.h
scripts/: run.sh
src/: ActionInitialization.cc  AnalysisManagerHelper.cc  ArapucaHit.cc  ColorReader.cc  DetectorConstruction.cc  EventAction.cc  G04DetectorConstruction.cc  G4CerenkovOpticks.cc  G4OpticalPhysicsOpticks.cc  G4ScintillationOpticks.cc  LArSoftManager.cc  MySensorIdentifier.cc  OpticksHitHandler.cc  PrimaryGeneratorAction.cc  ROOTManager.cpp  ROOTManager.hh  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc  TrackingAction.cc
src/Opticks/: MySensorIdentifier.cc  OpticksHitHandler.cc
ups/: product_deps
